fix z-indexes

--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -41,7 +41,7 @@ $icon-size: 1em;
     list-style: none;
     background: $neutral-100;
     box-shadow: $box-shadow-secondary;
-    z-index: 100;
+    z-index: 1000;
 
     .ads-dropdown-item
     {
